[gd_scene load_steps=38 format=3 uid="uid://bu6vcxv4fyx4v"]

[ext_resource type="Script" path="res://character_body_2d.gd" id="1_kibm2"]
[ext_resource type="Texture2D" uid="uid://4fhb7olaym76" path="res://Cat.png" id="2_cptv4"]
[ext_resource type="Script" path="res://camera_2d.gd" id="2_tr8mk"]
[ext_resource type="Script" path="res://progress_bar.gd" id="3_6qvw6"]
[ext_resource type="PackedScene" uid="uid://b4j3bls00h3ks" path="res://LoseScene.tscn" id="3_xuh4m"]
[ext_resource type="AudioStream" path="res://roti sounds/Roti4(LONG).mp3" id="6_ypccr"]
[ext_resource type="AudioStream" path="res://roti sounds/Roti5(LONG).mp3" id="7_veaoq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ub7ty"]
size = Vector2(16, 15.75)

[sub_resource type="AtlasTexture" id="AtlasTexture_dygas"]
atlas = ExtResource("2_cptv4")
region = Rect2(0, 482, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fpmff"]
atlas = ExtResource("2_cptv4")
region = Rect2(32, 482, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o24e7"]
atlas = ExtResource("2_cptv4")
region = Rect2(64, 482, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cgw48"]
atlas = ExtResource("2_cptv4")
region = Rect2(96, 482, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l37ap"]
atlas = ExtResource("2_cptv4")
region = Rect2(0, 66, 32, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_dmdb6"]
atlas = ExtResource("2_cptv4")
region = Rect2(32, 66, 32, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_ho7xu"]
atlas = ExtResource("2_cptv4")
region = Rect2(64, 66, 32, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_ajnm3"]
atlas = ExtResource("2_cptv4")
region = Rect2(96, 66, 32, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_r4wc7"]
atlas = ExtResource("2_cptv4")
region = Rect2(128, 66, 32, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_fndcf"]
atlas = ExtResource("2_cptv4")
region = Rect2(160, 66, 32, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_aonpt"]
atlas = ExtResource("2_cptv4")
region = Rect2(192, 66, 32, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_i2ugq"]
atlas = ExtResource("2_cptv4")
region = Rect2(224, 66, 32, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_8p5c0"]
atlas = ExtResource("2_cptv4")
region = Rect2(0, 546, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ofee8"]
atlas = ExtResource("2_cptv4")
region = Rect2(32, 546, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s8u8d"]
atlas = ExtResource("2_cptv4")
region = Rect2(64, 546, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5h0ay"]
atlas = ExtResource("2_cptv4")
region = Rect2(96, 546, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3phyy"]
atlas = ExtResource("2_cptv4")
region = Rect2(0, 578, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqe08"]
atlas = ExtResource("2_cptv4")
region = Rect2(32, 578, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cc74l"]
atlas = ExtResource("2_cptv4")
region = Rect2(64, 578, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0v0mw"]
atlas = ExtResource("2_cptv4")
region = Rect2(96, 578, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ofn36"]
atlas = ExtResource("2_cptv4")
region = Rect2(0, 0, 32, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_3y5ju"]
atlas = ExtResource("2_cptv4")
region = Rect2(32, 0, 32, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_m6hua"]
atlas = ExtResource("2_cptv4")
region = Rect2(64, 0, 32, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_gxeri"]
atlas = ExtResource("2_cptv4")
region = Rect2(96, 0, 32, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_ayrow"]
atlas = ExtResource("2_cptv4")
region = Rect2(0, 33, 32, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_rbch5"]
atlas = ExtResource("2_cptv4")
region = Rect2(32, 33, 32, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_38att"]
atlas = ExtResource("2_cptv4")
region = Rect2(64, 33, 32, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_3eb7g"]
atlas = ExtResource("2_cptv4")
region = Rect2(96, 33, 32, 33)

[sub_resource type="SpriteFrames" id="SpriteFrames_yy8l2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dygas")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fpmff")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o24e7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cgw48")
}],
"loop": true,
"name": &"charging stance",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l37ap")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dmdb6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ho7xu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ajnm3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r4wc7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fndcf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aonpt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i2ugq")
}],
"loop": true,
"name": &"idle sitting",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8p5c0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ofee8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s8u8d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5h0ay")
}],
"loop": false,
"name": &"jump part 1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3phyy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqe08")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cc74l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0v0mw")
}],
"loop": false,
"name": &"jump part 2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ofn36")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3y5ju")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m6hua")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gxeri")
}],
"loop": false,
"name": &"sit to stand",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ayrow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rbch5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_38att")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3eb7g")
}],
"loop": false,
"name": &"stand to sit",
"speed": 5.0
}]

[node name="Node2D" type="Node2D"]

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
position = Vector2(-23, -1)
script = ExtResource("1_kibm2")

[node name="DeathTimer" type="Timer" parent="CharacterBody2D"]
one_shot = true

[node name="Camera2D" type="Camera2D" parent="CharacterBody2D"]
position = Vector2(102, 8)
offset = Vector2(100, 0)
zoom = Vector2(5, 5)
script = ExtResource("2_tr8mk")

[node name="Control" parent="CharacterBody2D/Camera2D" instance=ExtResource("3_xuh4m")]
offset_left = 96.0
offset_right = 96.0
scale = Vector2(0.3, 0.3)

[node name="CanvasLayer" type="CanvasLayer" parent="CharacterBody2D/Camera2D"]

[node name="ProgressBar" type="ProgressBar" parent="CharacterBody2D/Camera2D/CanvasLayer"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -27.0
grow_horizontal = 2
grow_vertical = 0
max_value = 0.5
show_percentage = false
script = ExtResource("3_6qvw6")
character_node = NodePath("../../..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
position = Vector2(25, 8.875)
shape = SubResource("RectangleShape2D_ub7ty")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CharacterBody2D"]
position = Vector2(25, 4)
sprite_frames = SubResource("SpriteFrames_yy8l2")
animation = &"idle sitting"
autoplay = "idle sitting"

[node name="JumpSound" type="AudioStreamPlayer2D" parent="CharacterBody2D"]
position = Vector2(23, 1)

[node name="DeathSound1" type="AudioStreamPlayer2D" parent="CharacterBody2D"]
position = Vector2(23, 1)
stream = ExtResource("6_ypccr")

[node name="DeathSound2" type="AudioStreamPlayer2D" parent="CharacterBody2D"]
position = Vector2(23, 1)
stream = ExtResource("7_veaoq")

[connection signal="timeout" from="CharacterBody2D/DeathTimer" to="CharacterBody2D" method="_on_death_timer_timeout"]
